parser/src/parser.rs
//! Recursive-descent parser for Lang.P.

use crate::error::{ParseError, ParseErrorKind, ParseResult};
use langp_ast::{
    span_between, Arg, AssignOp, AssignTarget, BinaryOp, Block, CatchClause, ElifClause,
    EnumDecl, EnumVariant, EventHandler, Expr, FieldDecl, ForBinding, ForStmt, FunctionDecl,
    HttpKind, IfStmt, IoStmt, LambdaBody, ModuleItem, Param, Program, ReadKind, RepeatStmt,
    Stmt, TryStmt, TypeDecl, TypeExpr, TypeMember, UnaryOp, UseDecl, WhileStmt, WriteKind,
};
use langp_lexer::{Keyword, Span, Token, TokenKind};

/// How an indented block is closed.
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
enum BlockClose {
    /// All blocks close with `..` (Grammar Freeze v1.0).
    DoubleDot,
    /// Inner branch blocks (closed by outer construct's `..`).
    None,
}

/// Parses token streams into an AST.
pub struct Parser {
    tokens: Vec<Token>,
    pos: usize,
}

impl Parser {
    pub fn new(tokens: Vec<Token>) -> Self {
        Self { tokens, pos: 0 }
    }

    pub fn parse_program(mut self) -> ParseResult<Program> {
        let start = self.current_span();
        let mut items = Vec::new();

        while !self.is_at_end() {
            self.skip_newlines();
            if self.is_at_end() {
                break;
            }
            items.push(self.parse_module_item()?);
        }

        let end = if items.is_empty() {
            start
        } else {
            items.last().map(|i| item_span(i)).unwrap_or(start)
        };

        Ok(Program {
            items,
            span: span_between(start, end),
        })
    }

    fn parse_module_item(&mut self) -> ParseResult<ModuleItem> {
        if self.check_keyword(Keyword::Use) {
            return Ok(ModuleItem::Use(self.parse_use_decl()?));
        }
        if self.check_keyword(Keyword::Async) || self.check_keyword(Keyword::Function) {
            return Ok(ModuleItem::Function(self.parse_function_decl(false)?));
        }
        if self.check_keyword(Keyword::Type) {
            return Ok(ModuleItem::Type(self.parse_type_decl()?));
        }
        if self.check_keyword(Keyword::Enum) {
            return Ok(ModuleItem::Enum(self.parse_enum_decl()?));
        }
        if self.check_keyword(Keyword::On) {
            return Ok(ModuleItem::EventHandler(self.parse_event_handler()?));
        }
        Ok(ModuleItem::Stmt(self.parse_statement()?))
    }

    fn parse_use_decl(&mut self) -> ParseResult<UseDecl> {
        let start = self.bump_keyword(Keyword::Use)?;
        let mut path = vec![self.expect_ident_raw()?];
        while self.check(&TokenKind::Dot) {
            self.bump();
            path.push(self.expect_ident_raw()?);
        }
        self.expect_stmt_end()?;
        let end = self.previous_span();
        Ok(UseDecl {
            path,
            span: span_between(start, end),
        })
    }

    fn parse_function_decl(&mut self, _nested: bool) -> ParseResult<FunctionDecl> {
        let start = self.current_span();
        let is_async = if self.check_keyword(Keyword::Async) {
            self.bump();
            true
        } else {
            false
        };
        self.expect_keyword(Keyword::Function)?;
        let name = self.expect_ident_raw()?;
        self.expect(&TokenKind::LParen)?;
        let params = self.parse_param_list()?;
        self.expect(&TokenKind::RParen)?;
        let return_type = if self.check(&TokenKind::Arrow) {
            self.bump();
            Some(self.parse_type_expr()?)
        } else {
            None
        };
        self.expect(&TokenKind::Comma)?;
        let body = self.parse_indented_block(BlockClose::DoubleDot)?;
        let span = span_between(start, body.span);
        Ok(FunctionDecl {
            name,
            params,
            return_type,
            body,
            is_async,
            span,
        })
    }

    fn parse_type_decl(&mut self) -> ParseResult<TypeDecl> {
        let start = self.bump_keyword(Keyword::Type)?;
        let name = self.expect_ident_raw()?;
        self.expect(&TokenKind::Comma)?;
        let members = self.parse_type_members()?;
        Ok(TypeDecl {
            name,
            members,
            span: span_between(start, self.previous_span()),
        })
    }

    fn parse_enum_decl(&mut self) -> ParseResult<EnumDecl> {
        let start = self.bump_keyword(Keyword::Enum)?;
        let name = self.expect_ident_raw()?;
        self.expect(&TokenKind::Comma)?;
        self.skip_newlines();
        self.expect(&TokenKind::Indent)?;
        let mut variants = Vec::new();
        while !self.check(&TokenKind::Dedent) && !self.is_at_end() {
            self.skip_newlines();
            if self.check(&TokenKind::Dedent) {
                break;
            }
            let vstart = self.current_span();
            let vname = self.expect_ident_raw()?;
            self.expect_stmt_end()?;
            variants.push(EnumVariant {
                name: vname,
                span: span_between(vstart, self.previous_span()),
            });
        }
        self.expect(&TokenKind::Dedent)?;
        self.expect_block_close()?;
        Ok(EnumDecl {
            name,
            variants,
            span: span_between(start, self.previous_span()),
        })
    }

    fn parse_type_members(&mut self) -> ParseResult<Vec<TypeMember>> {
        self.skip_newlines();
        self.expect(&TokenKind::Indent)?;
        let mut members = Vec::new();
        while !self.check(&TokenKind::Dedent) && !self.is_at_end() {
            self.skip_newlines();
            if self.check(&TokenKind::Dedent) {
                break;
            }
            if self.check_keyword(Keyword::Function) {
                members.push(TypeMember::Function(self.parse_function_decl(true)?));
            } else {
                let start = self.current_span();
                let name = self.expect_ident_raw()?;
                let ty = if self.check(&TokenKind::Colon) {
                    self.bump();
                    Some(self.parse_type_expr()?)
                } else {
                    None
                };
                let default = if self.check(&TokenKind::Eq) {
                    self.bump();
                    Some(self.parse_expr()?)
                } else {
                    None
                };
                self.expect_stmt_end()?;
                members.push(TypeMember::Field(FieldDecl {
                    name,
                    ty,
                    default,
                    span: span_between(start, self.previous_span()),
                }));
            }
        }
        self.expect(&TokenKind::Dedent)?;
        self.expect_block_close()?;
        Ok(members)
    }

    fn parse_event_handler(&mut self) -> ParseResult<EventHandler> {
        let start = self.bump_keyword(Keyword::On)?;
        let event = self.parse_expr()?;
        let condition = if self.check_ident("where") {
            self.bump();
            Some(self.parse_expr()?)
        } else {
            None
        };
        self.expect(&TokenKind::Comma)?;
        let body = self.parse_indented_block(BlockClose::DoubleDot)?;
        let end = body.span;
        Ok(EventHandler {
            event,
            condition,
            body,
            span: span_between(start, end),
        })
    }

    fn parse_statement(&mut self) -> ParseResult<Stmt> {
        let start = self.current_span();

        if self.check_ident("print") {
            return self.parse_print_stmt(start);
        }
        if self.check_keyword(Keyword::Return) {
            self.bump();
            let values = if self.check_stmt_end() {
                Vec::new()
            } else {
                self.parse_expr_list()?
            };
            self.expect_stmt_end()?;
            return Ok(Stmt::Return {
                values,
                span: span_between(start, self.previous_span()),
            });
        }
        if self.check_keyword(Keyword::Break) {
            self.bump();
            self.expect_stmt_end()?;
            return Ok(Stmt::Break {
                span: span_between(start, self.previous_span()),
            });
        }
        if self.check_keyword(Keyword::Continue) {
            self.bump();
            self.expect_stmt_end()?;
            return Ok(Stmt::Continue {
                span: span_between(start, self.previous_span()),
            });
        }
        if self.check_keyword(Keyword::If) {
            return Ok(Stmt::If(self.parse_if_stmt(start)?));
        }
        if self.check_keyword(Keyword::RepeatForever) || self.check_keyword(Keyword::Repeat) {
            return Ok(Stmt::Repeat(self.parse_repeat_stmt(start)?));
        }
        if self.check_keyword(Keyword::For) {
            return Ok(Stmt::For(self.parse_for_stmt(start)?));
        }
        if self.check_keyword(Keyword::While) {
            return Ok(Stmt::While(self.parse_while_stmt(start)?));
        }
        if self.check_keyword(Keyword::Try) {
            return Ok(Stmt::Try(self.parse_try_stmt(start)?));
        }
        if self.check_ident("pass") {
            self.bump();
            self.expect_stmt_end()?;
            return Ok(Stmt::Pass {
                span: span_between(start, self.previous_span()),
            });
        }
        if self.check_ident("write") || self.check_ident("write_bytes") || self.check_ident("append") {
            return self.parse_write_stmt(start);
        }
        if self.check_ident("copy") || self.check_ident("move") || self.check_ident("rename") || self.check_ident("delete") {
            return self.parse_io_stmt(start);
        }

        // Assignment or expression statement
        if self.is_assign_start() {
            return self.parse_assign_or_expr_stmt(start);
        }

        let expr = self.parse_expr()?;
        self.expect_stmt_end()?;
        Ok(Stmt::Expr {
            span: span_between(start, self.previous_span()),
            expr,
        })
    }

    fn parse_print_stmt(&mut self, start: Span) -> ParseResult<Stmt> {
        self.expect_ident("print")?;
        let inline = if self.check_ident("inline") {
            self.bump();
            true
        } else {
            false
        };
        let mut parts = vec![self.parse_expr()?];
        while self.check(&TokenKind::Comma) || self.check_keyword(Keyword::With) {
            self.bump();
            parts.push(self.parse_expr()?);
        }
        self.expect_stmt_end()?;
        Ok(Stmt::Print {
            inline,
            parts,
            span: span_between(start, self.previous_span()),
        })
    }

    fn parse_write_stmt(&mut self, start: Span) -> ParseResult<Stmt> {
        let kind = match self.peek_ident().as_deref() {
            Some("write_bytes") => WriteKind::WriteBytes,
            Some("append") => WriteKind::Append,
            _ => WriteKind::Write,
        };
        self.bump();
        let value = self.parse_expr()?;
        self.expect_ident("to")?;
        let destination = self.parse_expr()?;
        self.expect_stmt_end()?;
        Ok(Stmt::Write {
            kind,
            value,
            destination,
            span: span_between(start, self.previous_span()),
        })
    }

    fn parse_io_stmt(&mut self, start: Span) -> ParseResult<Stmt> {
        let name = self.expect_ident_raw()?;
        let stmt = match name.as_str() {
            "copy" => {
                let source = self.parse_expr()?;
                self.expect_ident("to")?;
                let dest = self.parse_expr()?;
                IoStmt::Copy {
                    source,
                    dest,
                    span: span_between(start, self.previous_span()),
                }
            }
            "move" => {
                let source = self.parse_expr()?;
                self.expect_ident("to")?;
                let dest = self.parse_expr()?;
                IoStmt::Move {
                    source,
                    dest,
                    span: span_between(start, self.previous_span()),
                }
            }
            "rename" => {
                let source = self.parse_expr()?;
                self.expect_ident("to")?;
                let dest = self.parse_expr()?;
                IoStmt::Rename {
                    source,
                    dest,
                    span: span_between(start, self.previous_span()),
                }
            }
            "delete" => IoStmt::Delete {
                target: self.parse_expr()?,
                span: span_between(start, self.previous_span()),
            },
            _ => {
                return Err(ParseError::new(
                    ParseErrorKind::UnexpectedToken,
                    start,
                    format!("unknown io statement '{}'", name),
                ));
            }
        };
        self.expect_stmt_end()?;
        Ok(Stmt::Io(stmt))
    }

    fn parse_if_stmt(&mut self, start: Span) -> ParseResult<IfStmt> {
        self.bump_keyword(Keyword::If)?;
        let condition = self.parse_expr()?;
        self.expect(&TokenKind::Comma)?;
        let then_block = self.parse_indented_block(BlockClose::None)?;

        let mut elif_clauses = Vec::new();
        while self.check_keyword(Keyword::OtherwiseIf) {
            let estart = self.bump_keyword(Keyword::OtherwiseIf)?;
            let cond = self.parse_expr()?;
            self.expect(&TokenKind::Comma)?;
            let block = self.parse_indented_block(BlockClose::None)?;
            let block_span = block.span;
            elif_clauses.push(ElifClause {
                condition: cond,
                block,
                span: span_between(estart, block_span),
            });
        }

        let else_block = if self.check_keyword(Keyword::Otherwise) {
            self.bump();
            self.expect(&TokenKind::Comma)?;
            Some(self.parse_indented_block(BlockClose::None)?)
        } else {
            None
        };

        if self.check(&TokenKind::BlockClose) {
            self.bump();
        } else {
            return Err(self.block_close_error());
        }
        let end = self.previous_span();
        Ok(IfStmt {
            condition,
            then_block,
            elif_clauses,
            else_block,
            span: span_between(start, end),
        })
    }

    fn parse_repeat_stmt(&mut self, start: Span) -> ParseResult<RepeatStmt> {
        if self.check_keyword(Keyword::RepeatForever) {
            self.bump();
            self.expect(&TokenKind::Comma)?;
            let body = self.parse_indented_block(BlockClose::DoubleDot)?;
            let body_span = body.span;
            return Ok(RepeatStmt::Forever {
                body,
                span: span_between(start, body_span),
            });
        }

        self.bump_keyword(Keyword::Repeat)?;
        let count = self.parse_expr()?;
        self.expect_ident("times")?;
        let var = if self.check_keyword(Keyword::As) {
            self.bump();
            Some(self.expect_ident_raw()?)
        } else {
            None
        };
        self.expect(&TokenKind::Comma)?;
        let body = self.parse_indented_block(BlockClose::DoubleDot)?;
        let body_span = body.span;
        Ok(RepeatStmt::Count {
            count,
            var,
            body,
            span: span_between(start, body_span),
        })
    }

    fn parse_for_stmt(&mut self, start: Span) -> ParseResult<ForStmt> {
        self.bump_keyword(Keyword::For)?;
        let first = self.expect_ident_raw()?;
        let binding = if self.check(&TokenKind::Comma) {
            self.bump();
            let second = self.expect_ident_raw()?;
            ForBinding::KeyValue(first, second, start)
        } else {
            ForBinding::Single(first, start)
        };
        self.expect_keyword(Keyword::In)?;
        let iterable = self.parse_expr()?;
        self.expect(&TokenKind::Comma)?;
        let body = self.parse_indented_block(BlockClose::DoubleDot)?;
        let body_span = body.span;
        Ok(ForStmt {
            binding,
            iterable,
            body,
            span: span_between(start, body_span),
        })
    }

    fn parse_while_stmt(&mut self, start: Span) -> ParseResult<WhileStmt> {
        self.bump_keyword(Keyword::While)?;
        let condition = self.parse_expr()?;
        self.expect(&TokenKind::Comma)?;
        let body = self.parse_indented_block(BlockClose::DoubleDot)?;
        let body_span = body.span;
        Ok(WhileStmt {
            condition,
            body,
            span: span_between(start, body_span),
        })
    }

    fn parse_try_stmt(&mut self, start: Span) -> ParseResult<TryStmt> {
        self.bump_keyword(Keyword::Try)?;
        self.expect(&TokenKind::Comma)?;
        let body = self.parse_indented_block(BlockClose::None)?;

        let mut catches = Vec::new();
        while self.check_keyword(Keyword::Catch) {
            let cstart = self.bump_keyword(Keyword::Catch)?;
            let name = self.expect_ident_raw()?;
            let ty = if self.check(&TokenKind::Colon) {
                self.bump();
                Some(self.parse_type_expr()?)
            } else {
                None
            };
            self.expect(&TokenKind::Comma)?;
            let catch_body = self.parse_indented_block(BlockClose::None)?;
            let catch_span = catch_body.span;
            catches.push(CatchClause {
                name,
                ty,
                body: catch_body,
                span: span_between(cstart, catch_span),
            });
        }

        let finally_block = if self.check_keyword(Keyword::Finally) {
            self.bump();
            self.expect(&TokenKind::Comma)?;
            Some(self.parse_indented_block(BlockClose::None)?)
        } else {
            None
        };

        if self.check(&TokenKind::BlockClose) {
            self.bump();
        } else {
            return Err(self.block_close_error());
        }
        Ok(TryStmt {
            body,
            catches,
            finally_block,
            span: span_between(start, self.previous_span()),
        })
    }

    fn parse_indented_block(&mut self, close: BlockClose) -> ParseResult<Block> {
        self.skip_newlines();
        let start = self.current_span();
        self.expect(&TokenKind::Indent)?;
        let mut statements = Vec::new();
        while !self.check(&TokenKind::Dedent) && !self.is_at_end() {
            self.skip_newlines();
            if self.check(&TokenKind::Dedent) {
                break;
            }
            statements.push(self.parse_statement()?);
        }
        self.expect(&TokenKind::Dedent)?;

        match close {
            BlockClose::DoubleDot => {
                self.expect_block_close()?;
            }
            BlockClose::None => {}
        }

        Ok(Block {
            statements,
            span: span_between(start, self.previous_span()),
        })
    }

    fn parse_assign_or_expr_stmt(&mut self, start: Span) -> ParseResult<Stmt> {
        // Lookahead for assignment
        let checkpoint = self.pos;
        if let Ok(target) = self.parse_assign_target() {
            if let Some(op) = self.parse_assign_op() {
                let value = self.parse_expr()?;
                self.expect_stmt_end_after_expr(&value)?;
                return Ok(Stmt::Assign {
                    target,
                    op,
                    value,
                    span: span_between(start, self.previous_span()),
                });
            }
        }
        self.pos = checkpoint;
        let expr = self.parse_expr()?;
        self.expect_stmt_end()?;
        Ok(Stmt::Expr {
            expr,
            span: span_between(start, self.previous_span()),
        })
    }

    fn parse_assign_target(&mut self) -> ParseResult<AssignTarget> {
        let start = self.current_span();
        if self.is_ident() {
            let name = self.expect_ident_raw()?;
            if self.check(&TokenKind::Comma) {
                let mut names = vec![name];
                while self.check(&TokenKind::Comma) {
                    self.bump();
                    names.push(self.expect_ident_raw()?);
                }
                return Ok(AssignTarget::Tuple(names, start));
            }
            return self.finish_assign_target(Expr::Ident { name, span: start }, start);
        }
        if self.check_keyword(Keyword::SelfKw) {
            self.bump();
            return self.finish_assign_target(Expr::SelfExpr { span: start }, start);
        }
        Err(ParseError::new(
            ParseErrorKind::InvalidAssignmentTarget,
            start,
            "invalid assignment target",
        ))
    }

    fn finish_assign_target(
        &mut self,
        mut expr: Expr,
        start: Span,
    ) -> ParseResult<AssignTarget> {
        while self.check(&TokenKind::Dot) {
            self.bump();
            let member = self.expect_ident_raw()?;
            expr = Expr::Member {
                object: Box::new(expr),
                name: member,
                span: start,
            };
        }
        if self.check(&TokenKind::LBracket) {
            self.bump();
            let index = self.parse_expr()?;
            self.expect(&TokenKind::RBracket)?;
            return Ok(AssignTarget::Index {
                object: Box::new(expr),
                index: Box::new(index),
                span: start,
            });
        }
        if let Expr::Member { object, name, span } = expr {
            return Ok(AssignTarget::Member {
                object,
                name,
                span,
            });
        }
        if let Expr::Ident { name, span } = expr {
            return Ok(AssignTarget::Name(name, span));
        }
        Err(ParseError::new(
            ParseErrorKind::InvalidAssignmentTarget,
            start,
            "invalid assignment target",
        ))
    }

    fn parse_assign_op(&mut self) -> Option<AssignOp> {
        let op = match self.peek_kind() {
            Some(TokenKind::Eq) => AssignOp::Assign,
            Some(TokenKind::PlusEq) => AssignOp::AddAssign,
            Some(TokenKind::MinusEq) => AssignOp::SubAssign,
            Some(TokenKind::StarEq) => AssignOp::MulAssign,
            Some(TokenKind::SlashEq) => AssignOp::DivAssign,
            Some(TokenKind::PercentEq) => AssignOp::ModAssign,
            _ => return None,
        };
        self.bump();
        Some(op)
    }

    fn parse_param_list(&mut self) -> ParseResult<Vec<Param>> {
        let mut params = Vec::new();
        if self.check(&TokenKind::RParen) {
            return Ok(params);
        }
        loop {
            let start = self.current_span();
            let name = self.expect_ident_raw()?;
            let ty = if self.check(&TokenKind::Colon) {
                self.bump();
                Some(self.parse_type_expr()?)
            } else {
                None
            };
            let default = if self.check(&TokenKind::Eq) {
                self.bump();
                Some(self.parse_expr()?)
            } else {
                None
            };
            params.push(Param {
                name,
                ty,
                default,
                span: span_between(start, self.previous_span()),
            });
            if !self.check(&TokenKind::Comma) {
                break;
            }
            self.bump();
            if self.check(&TokenKind::RParen) {
                break;
            }
        }
        Ok(params)
    }

    fn parse_expr_list(&mut self) -> ParseResult<Vec<Expr>> {
        let mut exprs = vec![self.parse_expr()?];
        while self.check(&TokenKind::Comma) {
            self.bump();
            exprs.push(self.parse_expr()?);
        }
        Ok(exprs)
    }

    // --- Expression parsing (precedence climbing) ---

    fn parse_expr(&mut self) -> ParseResult<Expr> {
        self.parse_with_expr()
    }

    fn parse_with_expr(&mut self) -> ParseResult<Expr> {
        let mut parts = vec![self.parse_or_expr()?];
        while self.check_keyword(Keyword::With) {
            self.bump();
            parts.push(self.parse_or_expr()?);
        }
        if parts.len() == 1 {
            Ok(parts.into_iter().next().unwrap())
        } else {
            let span = span_between(parts.first().unwrap().span(), parts.last().unwrap().span());
            Ok(Expr::With { parts, span })
        }
    }

    fn parse_or_expr(&mut self) -> ParseResult<Expr> {
        let mut left = self.parse_and_expr()?;
        while self.check_keyword(Keyword::Or) || self.check(&TokenKind::OrOr) {
            let op_start = self.bump().span;
            let right = self.parse_and_expr()?;
            let end = right.span();
            left = Expr::Binary {
                op: BinaryOp::Or,
                left: Box::new(left),
                right: Box::new(right),
                span: span_between(op_start, end),
            };
        }
        Ok(left)
    }

    fn parse_and_expr(&mut self) -> ParseResult<Expr> {
        let mut left = self.parse_not_expr()?;
        while self.check_keyword(Keyword::And) || self.check(&TokenKind::AndAnd) {
            let op_start = self.bump().span;
            let right = self.parse_not_expr()?;
            let end = right.span();
            left = Expr::Binary {
                op: BinaryOp::And,
                left: Box::new(left),
                right: Box::new(right),
                span: span_between(op_start, end),
            };
        }
        Ok(left)
    }
